# JAI_Acquisition

./: .gitignore  CMakeLists.txt  acquisition.cpp  batcher.cpp  boost_python_streaming.cpp  config.json  jaized.cpp  main.cpp  streamer.cpp
include/: acquisition.hpp  batcher.hpp  jaized.hpp  streamer.hpp
